# agentic-backend

./: .yamllint.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
agents/: analysis_agent.py
api/core/: config.py  database.py  security.py
api/routers/: analysis.py
tests/: test_api.py
