[tool.poetry]
name = "agentic-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]  # ↓ APENAS UMA SEÇÃO DESTE TIPO NO ARQUIVO!
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.15"
psycopg2-binary = "^2.9.6"
fastapi = "0.109.0"

[tool.poetry.group.dev.dependencies]  # Dependências de desenvolvimento
pytest = "7.4.4"
pytest-asyncio = "0.23.5"
httpx = "0.27.0"
fastapi = "0.109.0"
httpcore = "1.0.9"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


